tests/ui/type-alias-impl-trait/issue-109054.stderr
error: item does not constrain `ReturnType::{opaque#0}`, but has it in its signature
  --> $DIR/issue-109054.rs:13:8
   |
LL |     fn deref(&self) -> &Self::Target {
   |        ^^^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/issue-109054.rs:7:23
   |
LL | type ReturnType<'a> = impl std::future::Future<Output = u32> + 'a;
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/issue-109054.rs:19:9
   |
LL | type ReturnType<'a> = impl std::future::Future<Output = u32> + 'a;
   |                 -- this generic parameter must be used with a generic lifetime parameter
...
LL |         &inner
   |         ^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0792`.
